Added a set of buttons to make it mobile use possible.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
-.quotebox {
+.commandRow {
     background-color: lightgray;
     border: 1px solid darkgray;
-    max-width: 200px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.commandButton {
+    width: 100%;
+    font-size: 2em;
+    margin: 1em;
 }
 
 .container {
